[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hulks"
description = "Olist custom linting hooks"
readme = "README.rst"
license = { file = "LICENSE" }
authors = [{ name = "Olist", email = "developers@olist.com" }]
keywords = ["pre-commit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.8"
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/olist/hulks/"

[project.scripts]
check-default-commentary-django-migration = "hulks.check_default_commentary_django_migration:main"
check-django-migrations-filename = "hulks.check_django_migrations_filename:main"
check-filename = "hulks.check_filename:main"
check-invalid-domains = "hulks.check_invalid_domains:main"
check-logger = "hulks.check_logger:main"
check-mutable-defaults = "hulks.check_mutable_defaults:main"
check-print = "hulks.check_print:main"

[tool.black]
line-length = 110
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 110
known_localfolder = ["hulks", "tests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"

[tool.mypy]
strict = true
disallow_any_unimported = true
show_traceback = true
python_version = "3.8"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/hulks"]
exclude = ["src/hulks/example.py"]

[tool.hatch.build.targets.sdist]
exclude = ["/.github"]
